project files uploaded

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-GOOGLE_API_KEY = "AIzaSyBzBMsOih6tBo4d-x5HoKQ0z-bw-OaIn04"
+GOOGLE_API_KEY="AIzaSyBzBMsOih6tBo4d-x5HoKQ0z-bw-OaIn04"
 LANGSMITH_TRACING=true
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY="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"
 LANGSMITH_PROJECT="langgraph-learning"
+ALPHA_VANTAGE_API_KEY=FJ14QHRWXNQXB6ME
+ALPHA_VANTAGE_BASE_URL=https://www.alphavantage.co/query
